--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -2,10 +2,17 @@
 # Akka Persistence Hazelcast Reference Config File #
 ####################################################
 
-# Hazelcast extenstion
-hazelcast {
-  # 'hazelcast.xml' location (i.e. 'hazelcast/hazelcast.xml')
-  config-file = "hazelcast.xml"
+akka {
+  extensions = ["akka.persistence.hazelcast.HazelcastExtension"]
+
+  persistence {
+    hazelcast {
+      # 'hazelcast.xml' classpath location (i.e. 'config/hazelcast.xml')
+      config-file = "hazelcast.xml"
+    }
+
+
+  }
 }
 
 # Hazelcast journal plugin
