--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -6,29 +6,30 @@ akka {
   extensions = ["akka.persistence.hazelcast.HazelcastExtension"]
 
   persistence {
+    # Hazelcast Extension
     hazelcast {
       # 'hazelcast.xml' classpath location (i.e. 'config/hazelcast.xml')
       config-file = "hazelcast.xml"
     }
 
-
+    # Hazelcast journal plugin
+    hazelcast-journal {
+      # Class name of the plugin
+      class = "akka.persistence.hazelcast.journal.HazelcastJournal"
+      # Name of the Hazelcast IMap to be created/used by the journal
+      map = "akka.persistence.journal"
+      # Dispatcher for the plugin actor.
+      plugin-dispatcher = "akka.persistence.dispatchers.default-plugin-dispatcher"
+      # Dispatcher for message replay.
+      replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
+    }
   }
-}
 
-# Hazelcast journal plugin
-hazelcast-journal {
-  # Class name of the plugin
-  class = "akka.persistence.hazelcast.journal.HazelcastJournal"
-
-  # Name of the Hazelcast IMap to be created/used by the journal
-  map = "akka.persistence.journal"
-}
-
-# Hazelcast snapshot plugin
-hazelcast-snapshot-store {
-  # Class name of the plugin
-  class = "akka.persistence.hazelcast.snapshot.HazelcastSnapshotStore"
-
-  # Name of the Hazelcast IMap to be created/used by the snapshot store
-  map = "akka.persistence.snapshot"
+  # Hazelcast snapshot plugin
+  hazelcast-snapshot-store {
+    # Class name of the plugin
+    class = "akka.persistence.hazelcast.snapshot.HazelcastSnapshotStore"
+    # Name of the Hazelcast IMap to be created/used by the snapshot store
+    map = "akka.persistence.snapshot"
+  }
 }
