--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,13 +1,15 @@
 akka {
   loglevel = "DEBUG"
-  stdout-loglevel = "INFO"
+  stdout-loglevel = "DEBUG"
 
   persistence {
-    journal.plugin = "hazelcast-journal"
-    snapshot-store.plugin = "hazelcast-snapshot-store"
-  }
-}
+    # Hazelcast Extenstion
+    hazelcast {
+      # 'hazelcast.xml' classpath location (i.e. 'config/hazelcast.xml')
+      config-file = "hazelcast.xml"
+    }
 
-hazelcast {
-  config-file = "hazelcast.xml"
+    journal.plugin = "akka.persistence.hazelcast-journal"
+    snapshot-store.plugin = "akka.persistence.hazelcast-snapshot-store"
+  }
 }
